# tmux-session-switcher

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.claude/agents/: rust-release-manager.md
docs/superpowers/plans/: 2026-04-15-favorite-commands.md  2026-04-16-fzf-replacement.md  2026-04-18-bell-notification-display.md  2026-04-19-refactoring.md  2026-04-24-cleanup-refactoring.md  2026-04-25-picker-tui-improvements.md
docs/superpowers/specs/: 2026-04-15-favorite-commands-design.md  2026-04-16-fzf-replacement-design.md  2026-04-18-bell-notification-display-design.md  2026-04-19-refactoring-design.md  2026-04-24-cleanup-refactoring-design.md  2026-04-25-picker-tui-improvements-design.md
src/: args.rs  config.rs  fzf.rs  main.rs  tmux.rs  utils.rs
src/picker/: filter.rs  input.rs  mod.rs  state.rs  theme.rs  ui.rs
src/tmux/: favorite.rs  mod.rs  previous.rs  window.rs
tests/: integration_test.rs
