[package]
name = "tmux-session-switcher"
version = "0.1.5"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
dirs = "6.0.0"
home = "0.5.11"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"
terminal_size = "0.4.0"
toml = "0.9.5"
