[package]
name = "tmux-session-switcher"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0.0"
home = "0.5.11"
nucleo-matcher = "0.3"
ratatui = "0.29"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"
tempfile = "3"
terminal_size = "0.4.0"
toml = "0.9.5"
